@@ -30,16 +30,6 @@ RELEASE 1.0.1 SHOWSTOPPERS:
 
 CURRENT VOTES:
 
-  *) Backport r209931 from 1.2 development trunk:
-     "Switch to lazy initialization of the pollset that's used within
-     apr_file_t on platforms where apr_wait_for_io_or_timeout() doesn't
-     use poll(2).  (This fixes a performance problem observed in httpd-2.x
-     on OS X due to the use of poll now being disabled by default on that
-     platform.)"
-        +1: brianp
-         0: 
-        -1: 
-
 CURRENT test/testall -v EXCEPTIONS:
 
     Please add any platform anomilies to the following exception list.
